force-app/main/default/objects/BCR__c/BCR__c.object-meta.xml
<CustomObject>
    <label>BCR</label>
    <nameField>
        <displayFormat>BCR-{00000}</displayFormat>
        <label>BCR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BCR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>