force-app/main/default/objects/BCR__c/fields/A_At_least_5WorkingDays_for_questions__c.field-meta.xml
<CustomField>
    <fullName>A_At_least_5WorkingDays_for_questions__c</fullName>
    <label>Answer 5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>