force-app/main/default/objects/BCR__c/fields/A_Contract_value_min_10MSEK_year__c.field-meta.xml
<CustomField>
    <fullName>A_Contract_value_min_10MSEK_year__c</fullName>
    <label>Answer 9</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>