force-app/main/default/objects/BCR__c/fields/A_Existing_customer__c.field-meta.xml
<CustomField>
    <fullName>A_Existing_customer__c</fullName>
    <label>Answer 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>