force-app/main/default/objects/BCR__c/fields/A_No_Subcontractors_or_HW_SW__c.field-meta.xml
<CustomField>
    <fullName>A_No_Subcontractors_or_HW_SW__c</fullName>
    <label>Answer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BCR_Fasttrack</valueSetName>
    </valueSet>
</CustomField>