force-app/main/default/objects/BCR__c/fields/A_We_have_relation_to_stakeholders__c.field-meta.xml
<CustomField>
    <fullName>A_We_have_relation_to_stakeholders__c</fullName>
    <label>Answer 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>