force-app/main/default/objects/BCR__c/fields/A_We_have_relevant_reference_Cases__c.field-meta.xml
<CustomField>
    <fullName>A_We_have_relevant_reference_Cases__c</fullName>
    <label>Answer 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>