force-app/main/default/objects/BCR__c/fields/A_Win_strategy_is_documented__c.field-meta.xml
<CustomField>
    <fullName>A_Win_strategy_is_documented__c</fullName>
    <label>Answer 6</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>