force-app/main/default/objects/BCR__c/fields/Approval_date_BCR1__c.field-meta.xml
<CustomField>
    <fullName>Approval_date_BCR1__c</fullName>
    <label>Approval date 1</label>
    <type>Date</type>
</CustomField>