force-app/main/default/objects/BCR__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <formula>IF( RecordType.Name = &quot;BCR0&quot;,  BCR0_approved__c , 
IF( RecordType.Name = &quot;BCR0 Fast Track&quot;, BCR0_approved__c, 
 BCR1_approved__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>