force-app/main/default/objects/BCR__c/fields/BCR0_Description__c.field-meta.xml
<CustomField>
    <fullName>BCR0_Description__c</fullName>
    <label>BCR0 Description</label>
    <type>TextArea</type>
</CustomField>