force-app/main/default/objects/BCR__c/fields/BCR1_Description__c.field-meta.xml
<CustomField>
    <fullName>BCR1_Description__c</fullName>
    <label>BCR1 Description</label>
    <type>TextArea</type>
</CustomField>