force-app/main/default/objects/BCR__c/fields/BCR1_Type__c.field-meta.xml
<CustomField>
    <fullName>BCR1_Type__c</fullName>
    <defaultValue>&quot;BCR-&quot;</defaultValue>
    <inlineHelpText>Add BCR type description</inlineHelpText>
    <label>BCR1 Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>