force-app/main/default/objects/BCR__c/fields/BCR_Link__c.field-meta.xml
<CustomField>
    <fullName>BCR_Link__c</fullName>
    <description>For BCR Reporting</description>
    <formula>&quot;https://soprasteriasc.lightning.force.com/&quot;&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCR Link</label>
    <type>Text</type>
</CustomField>