force-app/main/default/objects/BCR__c/fields/BCR_Type__c.field-meta.xml
<CustomField>
    <fullName>BCR_Type__c</fullName>
    <formula>if(BCR1_Type__c !=&quot;BCR-&quot;, BCR1_Type__c,RecordType.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCR Type</label>
    <type>Text</type>
</CustomField>