force-app/main/default/objects/BCR__c/fields/Bid_deadline__c.field-meta.xml
<CustomField>
    <fullName>Bid_deadline__c</fullName>
    <formula>Opportunity__r.Proposal_Due_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid deadline</label>
    <type>DateTime</type>
</CustomField>