force-app/main/default/objects/BCR__c/fields/Bid_Manager__c.field-meta.xml
<CustomField>
    <fullName>Bid_Manager__c</fullName>
    <label>Bid Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>