force-app/main/default/objects/BCR__c/fields/Bid_owner__c.field-meta.xml
<CustomField>
    <fullName>Bid_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bid owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BCR</relationshipName>
    <type>Lookup</type>
</CustomField>