force-app/main/default/objects/BCR__c/fields/BIDManager__c.field-meta.xml
<CustomField>
    <fullName>BIDManager__c</fullName>
    <formula>Opportunity__r.Owner.BASPersonneID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BIDManager</label>
    <type>Text</type>
</CustomField>