force-app/main/default/objects/BCR__c/fields/Competitor_1__c.field-meta.xml
<CustomField>
    <fullName>Competitor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor 1</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipLabel>BCR</relationshipLabel>
    <relationshipName>BCR</relationshipName>
    <type>Lookup</type>
</CustomField>