force-app/main/default/objects/BCR__c/fields/Competitor_2__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor 2</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipLabel>BCR (Competitor 2)</relationshipLabel>
    <relationshipName>BCR1</relationshipName>
    <type>Lookup</type>
</CustomField>