force-app/main/default/objects/BCR__c/fields/Competitor_3__c.field-meta.xml
<CustomField>
    <fullName>Competitor_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor 3</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipLabel>BCR (Competitor 3)</relationshipLabel>
    <relationshipName>BCR2</relationshipName>
    <type>Lookup</type>
</CustomField>