force-app/main/default/objects/BCR__c/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <inlineHelpText>Please enter the competitors in fields &quot;Competitor # 1-5&quot;</inlineHelpText>
    <label>Competitors description</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>