force-app/main/default/objects/BCR__c/fields/Critical_bid_deliverables__c.field-meta.xml
<CustomField>
    <fullName>Critical_bid_deliverables__c</fullName>
    <label>Critical bid deliverables</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>