force-app/main/default/objects/BCR__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Approval date 0</label>
    <type>Date</type>
</CustomField>