force-app/main/default/objects/BCR__c/fields/Decisions_taken1__c.field-meta.xml
<CustomField>
    <fullName>Decisions_taken1__c</fullName>
    <label>Decisions taken1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>