force-app/main/default/objects/BCR__c/fields/Decisions_taken_OLD__c.field-meta.xml
<CustomField>
    <fullName>Decisions_taken_OLD__c</fullName>
    <label>Decisions taken OLD</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>