force-app/main/default/objects/BCR__c/fields/Decisons_taken__c.field-meta.xml
<CustomField>
    <fullName>Decisons_taken__c</fullName>
    <description>Decisions taken, used for both record types. Previous name BCR Description</description>
    <label>Decisions taken</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>