force-app/main/default/objects/BCR__c/fields/Description_of_project__c.field-meta.xml
<CustomField>
    <fullName>Description_of_project__c</fullName>
    <label>Description of project</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>