force-app/main/default/objects/BCR__c/fields/Desirability__c.field-meta.xml
<CustomField>
    <fullName>Desirability__c</fullName>
    <label>Desirability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>