force-app/main/default/objects/BCR__c/fields/Dummy__c.field-meta.xml
<CustomField>
    <fullName>Dummy__c</fullName>
    <formula>&apos;0&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dummy</label>
    <type>Text</type>
</CustomField>