force-app/main/default/objects/BCR__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO - Oslo</fullName>
            </value>
            <value>
                <fullName>NO - Stavanger</fullName>
            </value>
            <value>
                <fullName>NO - Trondheim</fullName>
            </value>
            <value>
                <fullName>SE - Stockholm</fullName>
            </value>
            <value>
                <fullName>SE - Göteborg</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>SE - Malmö</fullName>
            </value>
            <value>
                <fullName>East</fullName>
                <isActive>false</isActive>
                <label>East</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>