force-app/main/default/objects/BCR__c/fields/Main_reason_for_decision_OLD__c.field-meta.xml
<CustomField>
    <fullName>Main_reason_for_decision_OLD__c</fullName>
    <label>Main reason for decision OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>