force-app/main/default/objects/BCR__c/fields/Meeting_Week_Year__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Week_Year__c</fullName>
    <formula>YEAR(BCR_Meeting_Date__c + (MOD(8- ( MOD( BCR_Meeting_Date__c  - DATE(1900, 1, 7), 7)+1 ) ,7)-3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Week Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>