force-app/main/default/objects/BCR__c/fields/Must_win_definition__c.field-meta.xml
<CustomField>
    <fullName>Must_win_definition__c</fullName>
    <formula>HYPERLINK(&quot;https://soprasteriasc.my.salesforce.com/sfc/p/58000000XlxV/a/4I000001jIgM/RBfzxk8JoVlU5sw1yY5oVb1x7k6ZDPotUwtNr0G5BRs&quot;, &quot;Vad innebär det om vi definierar en affär som ”must win”?&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Must win definition</label>
    <type>Text</type>
</CustomField>