force-app/main/default/objects/BCR__c/fields/Price_risk_desirability__c.field-meta.xml
<CustomField>
    <fullName>Price_risk_desirability__c</fullName>
    <label>Price-risk desirability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Opportunistic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>