force-app/main/default/objects/BCR__c/fields/Project_followed_up_in_Portfolio_ISG__c.field-meta.xml
<CustomField>
    <fullName>Project_followed_up_in_Portfolio_ISG__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The project/delivery must be followed up in portfolio/ISG</inlineHelpText>
    <label>Project followed up in Portfolio/ISG</label>
    <type>Checkbox</type>
</CustomField>