force-app/main/default/objects/BCR__c/fields/Project_Room_required_from_date__c.field-meta.xml
<CustomField>
    <fullName>Project_Room_required_from_date__c</fullName>
    <label>Project Room required from date</label>
    <type>Date</type>
</CustomField>