force-app/main/default/objects/BCR__c/fields/Project_start_date__c.field-meta.xml
<CustomField>
    <fullName>Project_start_date__c</fullName>
    <label>Project start date</label>
    <type>Date</type>
</CustomField>