force-app/main/default/objects/BCR__c/fields/Project_type__c.field-meta.xml
<CustomField>
    <fullName>Project_type__c</fullName>
    <label>Project type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>