force-app/main/default/objects/BCR__c/fields/Q_Assistance_Only_No_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Q_Assistance_Only_No_Delivery__c</fullName>
    <label>Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistance. No delivery obligation</fullName>
                <default>true</default>
                <label>Assistance. No delivery obligation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>