force-app/main/default/objects/BCR__c/fields/Q_At_least_5WorkingDays_for_questions__c.field-meta.xml
<CustomField>
    <fullName>Q_At_least_5WorkingDays_for_questions__c</fullName>
    <label>Question 5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Är det minst 5 arbetsdagar kvar för att ställa frågor till kund så att vi kan säkerställa relevant svar?</fullName>
                <default>true</default>
                <label>Är det minst 5 arbetsdagar kvar för att ställa frågor till kund så att vi kan säkerställa relevant svar?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>