force-app/main/default/objects/BCR__c/fields/Q_Contract_value_annual_and_total__c.field-meta.xml
<CustomField>
    <fullName>Q_Contract_value_annual_and_total__c</fullName>
    <label>Question 8</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vad är kontraktsvärdet per år och totalt? Hur vet vi detta?</fullName>
                <default>true</default>
                <label>Vad är kontraktsvärdet per år och totalt? Hur vet vi detta?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>