force-app/main/default/objects/BCR__c/fields/Q_Deal_and_customer_has_growth_potential__c.field-meta.xml
<CustomField>
    <fullName>Q_Deal_and_customer_has_growth_potential__c</fullName>
    <label>Question 7</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Har affären och kunden en potential att växa?</fullName>
                <default>true</default>
                <label>Har affären och kunden en potential att växa?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>