force-app/main/default/objects/BCR__c/fields/Q_Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Q_Existing_Customer__c</fullName>
    <label>Question 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kunden är en existerande kund till oss</fullName>
                <default>true</default>
                <label>Kunden är en existerande kund till oss</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>