force-app/main/default/objects/BCR__c/fields/Q_NO_BU_Excluded_from_Future_Deliveries__c.field-meta.xml
<CustomField>
    <fullName>Q_NO_BU_Excluded_from_Future_Deliveries__c</fullName>
    <label>Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excludes no other BUs from future deliveries</fullName>
                <default>true</default>
                <label>Excludes no other BUs from future deliveries</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>