force-app/main/default/objects/BCR__c/fields/Q_Only_One_BU_Involved__c.field-meta.xml
<CustomField>
    <fullName>Q_Only_One_BU_Involved__c</fullName>
    <label>Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only one BU involved in bidding and delivery</fullName>
                <default>true</default>
                <label>Only one BU involved in bidding and delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>