force-app/main/default/objects/BCR__c/fields/Q_Opportunity_rooted_in_BU__c.field-meta.xml
<CustomField>
    <fullName>Q_Opportunity_rooted_in_BU__c</fullName>
    <label>Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity must be rooted in BU in advance</fullName>
                <default>true</default>
                <label>Opportunity must be rooted in BU in advance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>