force-app/main/default/objects/BCR__c/fields/Q_Strategic_Win_for_these_BUs__c.field-meta.xml
<CustomField>
    <fullName>Q_Strategic_Win_for_these_BUs__c</fullName>
    <label>Question 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vilka BU bedömer denna affär som strategiskt värdefull för Sopra Steria Sverige? Minst två BU för Must win</fullName>
                <default>true</default>
                <label>Vilka BU bedömer denna affär som strategiskt värdefull för Sopra Steria Sverige? Minst två BU för Must win</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>