force-app/main/default/objects/BCR__c/fields/Q_We_have_relation_to_stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Q_We_have_relation_to_stakeholders__c</fullName>
    <label>Question 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vi har en relation till viktiga stakeholders hos kunden</fullName>
                <default>true</default>
                <label>Vi har en relation till viktiga stakeholders hos kunden</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>