force-app/main/default/objects/BCR__c/fields/Q_Win_strategy_is_documented__c.field-meta.xml
<CustomField>
    <fullName>Q_Win_strategy_is_documented__c</fullName>
    <label>Question 6</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Är vinststrategin dokumenterad?</fullName>
                <default>true</default>
                <label>Är vinststrategin dokumenterad?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>