force-app/main/default/objects/BCR__c/fields/Request_approval__c.field-meta.xml
<CustomField>
    <fullName>Request_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this option to send email request to authorized BCR approver</inlineHelpText>
    <label>Send Approval Request</label>
    <type>Checkbox</type>
</CustomField>