force-app/main/default/objects/BCR__c/fields/Required_bid_resources__c.field-meta.xml
<CustomField>
    <fullName>Required_bid_resources__c</fullName>
    <label>Required bid resources</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>