force-app/main/default/objects/BCR__c/fields/Responsible_for_decision__c.field-meta.xml
<CustomField>
    <fullName>Responsible_for_decision__c</fullName>
    <label>Responsible for decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>