force-app/main/default/objects/BCR__c/fields/Risk_description__c.field-meta.xml
<CustomField>
    <fullName>Risk_description__c</fullName>
    <label>Risk description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>