force-app/main/default/objects/BCR__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <description>For KPI Reporting (France), report &apos;KPI Presales report&apos;</description>
    <formula>VALUE(TRIM(LEFT( TEXT(Delivery_risk__c) , 2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>