force-app/main/default/objects/BCR__c/fields/Service_areas_and_capabilities__c.field-meta.xml
<CustomField>
    <fullName>Service_areas_and_capabilities__c</fullName>
    <label>Service areas and capabilities</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>