force-app/main/default/objects/BCR__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GO</fullName>
            </value>
            <value>
                <fullName>NO GO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>