force-app/main/default/objects/BCR__c/fields/Strategic_Apps__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Apps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apps</label>
    <type>Checkbox</type>
</CustomField>