force-app/main/default/objects/BCR__c/fields/Strategic_AppsAdvisoryServices__c.field-meta.xml
<CustomField>
    <fullName>Strategic_AppsAdvisoryServices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisory Services</label>
    <type>Checkbox</type>
</CustomField>