force-app/main/default/objects/BCR__c/fields/Strategic_BA__c.field-meta.xml
<CustomField>
    <fullName>Strategic_BA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BA</label>
    <type>Checkbox</type>
</CustomField>