force-app/main/default/objects/BCR__c/fields/Strategic_BVS__c.field-meta.xml
<CustomField>
    <fullName>Strategic_BVS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BVS</label>
    <type>Checkbox</type>
</CustomField>