force-app/main/default/objects/BCR__c/fields/Strategic_Core__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Core__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core</label>
    <type>Checkbox</type>
</CustomField>