force-app/main/default/objects/BCR__c/fields/Strategic_DPS__c.field-meta.xml
<CustomField>
    <fullName>Strategic_DPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DPS</label>
    <type>Checkbox</type>
</CustomField>