force-app/main/default/objects/BCR__c/fields/Strategic_East__c.field-meta.xml
<CustomField>
    <fullName>Strategic_East__c</fullName>
    <defaultValue>false</defaultValue>
    <label>East</label>
    <type>Checkbox</type>
</CustomField>