force-app/main/default/objects/BCR__c/fields/Strategic_North__c.field-meta.xml
<CustomField>
    <fullName>Strategic_North__c</fullName>
    <defaultValue>false</defaultValue>
    <label>North</label>
    <type>Checkbox</type>
</CustomField>