force-app/main/default/objects/BCR__c/fields/Subcontractor_Partner_2__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Partner_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subcontractor / Partner 2</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipLabel>BCR (Subcontractor / Partner 2)</relationshipLabel>
    <relationshipName>BCR6</relationshipName>
    <type>Lookup</type>
</CustomField>