force-app/main/default/objects/BCR__c/fields/Weight_Price__c.field-meta.xml
<CustomField>
    <fullName>Weight_Price__c</fullName>
    <label>Weight Price (%)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>