force-app/main/default/objects/BCR__c/fields/Weight_Quality_CV__c.field-meta.xml
<CustomField>
    <fullName>Weight_Quality_CV__c</fullName>
    <label>Weight Quality: CV (%)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>