force-app/main/default/objects/BCR__c/fields/Win_probability_old__c.field-meta.xml
<CustomField>
    <fullName>Win_probability_old__c</fullName>
    <label>Win probability old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>