force-app/main/default/objects/BCR__c/fields/Win_strategy_URL__c.field-meta.xml
<CustomField>
    <fullName>Win_strategy_URL__c</fullName>
    <label>Win strategy URL</label>
    <type>Url</type>
</CustomField>