force-app/main/default/objects/BCR__c/fields/Winning_strategy_and_key_strength__c.field-meta.xml
<CustomField>
    <fullName>Winning_strategy_and_key_strength__c</fullName>
    <label>Winning strategy &amp; key strength</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>