force-app/main/default/objects/BCR__c/recordTypes/BCR0.recordType-meta.xml
<RecordType>
    <fullName>BCR0</fullName>
    <active>true</active>
    <label>BCR0</label>
</RecordType>