force-app/main/default/objects/BCR__c/recordTypes/BCR0_Fast_track.recordType-meta.xml
<RecordType>
    <fullName>BCR0_Fast_track</fullName>
    <active>true</active>
    <label>BCR0 Fast track</label>
</RecordType>