force-app/main/default/objects/BCR__c/recordTypes/BCR1.recordType-meta.xml
<RecordType>
    <fullName>BCR1</fullName>
    <active>true</active>
    <label>BCR1</label>
</RecordType>