force-app/main/default/objects/BCR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BCR_Type__c</columns>
    <columns>BCR_Meeting_Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Approved__c</columns>
    <columns>Decisons_taken__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>