force-app/main/default/objects/BCR__c/listViews/BCR1_Open.listView-meta.xml
<ListView>
    <fullName>BCR1_Open</fullName>
    <columns>NAME</columns>
    <columns>BCR1_Type__c</columns>
    <columns>BCR_Meeting_Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Approved__c</columns>
    <columns>Decisons_taken__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BCR_Type__c</field>
        <operation>equals</operation>
        <value>BCR1</value>
    </filters>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>BCR1 - Open</label>
</ListView>